# now

./: .envrc  Cargo.toml  LICENSE  README.md  default.nix  example.nix  example_complete.nix  example_min.nix  flake.nix  now.nix  shell.nix  uneven.nix
.cix/: check.nix
.tack/: pins.lock.json  pins.toml
.uneven/tests/: vars.nix
book/: book.toml
book/src/: SUMMARY.md
nix/: default.nix  module.nix  package.nix  step.nix  types.nix  workflow.nix
nix/adios/: cix.nix  job.nix  step.nix  workflow.nix
now-secret/: Cargo.toml
now-secret/src/: lib.rs
now-step/: Cargo.toml  build.zig  build.zig.zon  default.nix  deps.nix
now-step/src/: main.rs  main.zig  root.zig  run.rs  secret_collection.zig
src/: environment.rs  job.rs  main.rs  project.rs  secret.rs  step.rs  utils.rs  workflow.rs
src/builder/: local.rs  mod.rs  remote.rs
