[package]
name = "now-step"
version = "0.1.0"
edition = "2024"
description = "Step runner for now"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
now-secret = { workspace = true }
portable-pty = "0.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
